kubernetes-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-django-frontend
  labels:
    app: demo-django
    tier: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-django
      tier: frontend
  template:
    metadata:
      labels:
        app: demo-django
        tier: frontend
    spec:
      containers:
      - name: frontend
        image: codescope/demo-django:${COMMIT}
        command: ["codescope-run", "gunicorn", "demo.wsgi", "-b", "0.0.0.0:8000"]
        ports:
        - containerPort: 8000
        env:
        - name: CODESCOPE_SERVICE
          value: frontend
        - name: CODESCOPE_APIKEY
          value: ${CODESCOPE_APIKEY}
        - name: CODESCOPE_ENVIRONMENT
          value: ${CODESCOPE_ENVIRONMENT}
---
apiVersion: v1
kind: Service
metadata:
  name: demo-django-frontend-svc
  labels:
    app: demo-django
    tier: frontend
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: demo-django
    tier: frontend
